# VideoDocRec

./: CMakeLists.txt  Dewarper.cpp  Dewarper_CPU.h  README.md  Scaler.cpp  main.cpp
Assesors/: VOL.h  assessorBase.h  rank_bluro.h
Libs/: LinkedList.h  RobustMatcher.cpp  ScoredImage.h  fish.h
Welder/: Assessor.h  Composer.h
src/: blend.cpp  clone.cpp  kvldsiftwarp.cpp  poisson_solver.cpp
temp/: main.cpp  util.cpp  util.h
